--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 url: http://bbconan.github.io
 title: Home Of Code Monkey
-subtitle: A Blog for IOS Developer.
+subtitle: A Blog for iOS Developer.
 author: conan
 simple_search: http://google.com/search
 description:
