--- a/_config.yml
+++ b/_config.yml
@@ -3,12 +3,11 @@
 # ----------------------- #
 
 url: http://bbconan.github.io
-title: Home Of Code Monkey
-subtitle: A Blog for iOS Developer.
+title: 技术博客
+subtitle: 学无止境。
 author: conan
 simple_search: http://google.com/search
 description:
-
 # Default date format is "ordinal" (resulting in "July 22nd 2007")
 # You can customize the format as defined in
 # http://www.ruby-doc.org/core-1.9.2/Time.html#method-i-strftime
@@ -19,7 +18,7 @@ date_format: "ordinal"
 subscribe_rss: /atom.xml
 subscribe_email:
 # RSS feeds can list your email address if you like
-email:
+email: bbconan@gmail.com
 
 # ----------------------- #
 #    Jekyll & Plugins     #
@@ -78,6 +77,7 @@ weibo_fansline: 0   # 粉丝显示多少行
 weibo_show: true    # 是否显示最近微博内容
 weibo_pic: true     # 是否显示微博中的图片
 weibo_skin: 10      # 使用哪种配色风格，数字为从1开始的微博秀风格序号
+weibo_user: 1729937805
 # Pinboard
 pinboard_user:
 pinboard_count: 3
@@ -93,3 +93,5 @@ disqus_show_comment_count: false
 # Google Analytics
 google_analytics_tracking_id:
 
+# comment and share
+comment_share: true
